--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Collection of Lifetime Newton Works",
   "main": "scripts/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node script/index.js",
+    "clean": "rm -rf works && mkdir -p works/pdf && mkdir works/html"
   },
   "author": "Debdut Karmakar <iawaiponly@gmail.com>",
   "license": "ISC",
